force-app/main/default/objects/custom_create155__c/custom_create155__c.object-meta.xml
<CustomObject>
    <label>Custom created object155</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects155</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>