force-app/main/default/objects/custom_create155__c/fields/custom_create_155field500__c.field-meta.xml
<CustomField>
    <fullName>custom_create_155field500__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 155field500</label>
    <type>Checkbox</type>
</CustomField>