force-app/main/default/objects/custom_create155__c/fields/custom_create_155field563__c.field-meta.xml
<CustomField>
    <fullName>custom_create_155field563__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 155field563</label>
    <type>Checkbox</type>
</CustomField>